--- a/instruction_site/package.json
+++ b/instruction_site/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
-    "@nuxt/ui": "^3.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
@@ -21,6 +20,9 @@
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@nuxtjs/i18n": "^9.5.4"
+    "@nuxtjs/i18n": "^9.5.4",
+    "daisyui": "^5.0.37",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
