--- a/instruction_site/package.json
+++ b/instruction_site/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "dev host": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
+    "@nuxt/ui": "^3.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
