--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,20 @@
-# Job name has to be `pages`. See https://docs.gitlab.com/ee/user/project/pages/#how-it-works
 pages:
-   image: node
-   before_script:
-      - cd instruction_site
-      - npm ci --cache .npm --prefer-offline
-   script:
-      # Specify the steps involved to build your app here
-      - npm run generate
-   cache: # https://docs.gitlab.com/ee/ci/caching/#cache-nodejs-dependencies
-      key: "$CI_COMMIT_SHA"
-      paths:
-         - instruction_site/.npm/
-   artifacts:
-      paths:
-         # The directory that contains the built files to be published
-         - instruction_site/.output/public
-   # The directory that contains the built files to be published
-   publish: instruction_site/.output/public
-   rules:
-      # This ensures that only pushes to the default branch 
-      # will trigger a pages deploy
-      - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+  image: node
+  before_script:
+    - cd instruction_site
+    - npm ci --cache .npm --prefer-offline
+  script:
+    - npm run generate
+    - echo "Listing output folder:"
+    - ls -la .output/public
+  artifacts:
+    paths:
+      - instruction_site/.output/public
+  publish: instruction_site/.output/public
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+  cache:
+    key: "$CI_COMMIT_SHA"
+    paths:
+      - instruction_site/.npm/
+
