--- a/instruction_page/package.json
+++ b/instruction_page/package.json
@@ -14,6 +14,7 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/ui": "^3.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "better-sqlite3": "^11.10.0",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
     "typescript": "^5.8.3",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@nuxt/content": "^3.6.1",
     "@nuxtjs/i18n": "^9.5.4",
     "daisyui": "^5.0.37",
     "prettier": "^3.5.3",
