gh pages deploy pipe

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,10 +14,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
+      - working-directory: instruction_page
       # Pick your own package manager and build script
-      - run: cd instruction_page
-      - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - run: |
+          cd instruction_page
+          npm install
+          npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
