--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,8 +32,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Detect package manager
+        working-directory: ./instruction_site
         id: detect-package-manager
         run: |
+          cd instruction_page
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
@@ -63,6 +65,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
+            cd instruction_page
             dist
             .nuxt
           key: ${{ runner.os }}-nuxt-build-${{ hashFiles('dist') }}
@@ -70,8 +73,8 @@ jobs:
             cd instruction_page
             ${{ runner.os }}-nuxt-build-
       - name: Install dependencies
+        working-directory: ./instruction_site
         run: |
-          cd instruction_page
           ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Static HTML export with Nuxt
         run: |
@@ -80,7 +83,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./instruction_page/dist
 
   # Deployment job
   deploy:
