--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: instruction_page  # <--- WICHTIG
+        working-directory: instruction_page
     steps:
       - name: Checkout
         uses: actions/checkout@v4
